--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cross-spawn": "^7.0.5",
     "express": "^5.1.0"
   },
   "devDependencies": {
