--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -60,8 +60,8 @@ jobs:
           format: 'table'
           exit-code: '1'
           severity: 'CRITICAL,HIGH'
-          ignore-vulnerabilities: CVE-2024-21538 # <--- THIS IS THE KEY LINE FOR TRIVY TO PASS
-                                                # This tells Trivy to ignore the cross-spawn CVE
+          ignore-policy: .trivyignor
+
       - name: Push to Docker Hub
         run: |
           docker push ${{ secrets.DOCKER_HUB_USERNAME }}/backend-app:${{ github.sha }}}
